--- a/templates/display.html
+++ b/templates/display.html
@@ -1,15 +1,16 @@
 <html>
 	<head>
-		<script type="text/javascript" src="{{url_for('static', filename='js/jquery-1.9.0.js')}}"></script>
-		<script type='text/javascript' src="{{url_for('static', filename='js/script.js')}}"></script>
+		<!-- <meta http-equiv="refresh" content="600"> -->
+		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.9.0.js') }}"></script>
+		<script type='text/javascript' src="{{ url_for('static', filename='js/script.js') }}"></script>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-		<link rel=stylesheet type=text/css href="{{url_for('static', filename='css/style.css')}}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body class='display'>
-		<p class='feedno' style="display: none">{{ feedno }}</p>
-		<a href="{{url_for('mainpage')}}" class='btn btn-primary btn-lg active backtomain'>Back to main</a>
+		<a href="{{ url_for('mainpage') }}" class='backtomain'>Back to main</a>
 		<div class="container">
-			<div class='feedsdiv'>
+			<div id='feedsdiv'>
 				{% for feed in feedlist %}
 				<div class='row'>
 					<h3 class='text-center'><b>{{ feed.title }}</b></h3>
@@ -20,8 +21,9 @@
 			</div>
 			<div class="row footer text-center">
 				<button class='prev' style="visibility: hidden">&larr; PREVIOUS</button>
-				<p class='pageno'>Page {{ page_no }}</p>
+				Page <span id="pageno">1</span>
 				<button class='next'>NEXT &rarr;</button>
+				<a href="{{ url_for('newsjson') }}" class='text-center json'>(View JSON)</a>
 			</div>
 		</div>
 	</body>
