--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -1,7 +1,5 @@
 <html>
 <head>
-	<script type="text/javascript" src="{{url_for('static', filename='js/jquery-1.9.0.js')}}"></script>
-	<script type='text/javascript' src="{{url_for('static', filename='js/script.js')}}"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 	<link rel=stylesheet type=text/css href="{{url_for('static', filename='css/style.css')}}">
 </head>
@@ -10,6 +8,7 @@
 		<div class='row'>
 			<h1 class='heading'>Welcome to 7c news</h1>	
 		</div>
+		<div class="row time"></div>
 		<div class='row'>
 			<h3 class='category'>Tune into a channel below</h3>	
 		</div>
